src/test/deca/context/invalid/SO/falseAdd.deca
// Historique:
//    cree le 22/01/2022

{
    boolean a = true ;
    int b ;
    boolean c =  a && b ;
}